# yeongcheon-vacant-house-patrol

./: .gitignore  README.md
ros2_docker/colcon_ws/src/patrol_planner/: API_SPEC.md  README.md  RUN_GUIDE.md  package.xml  setup.cfg  setup.py
ros2_docker/colcon_ws/src/patrol_planner/dummy_backend/: dummy_server.py  index.html
ros2_docker/colcon_ws/src/patrol_planner/patrol_planner/: graph.py  path_follower.py  patrol_node.py  planner.py  yolo_detector_node.py
ros2_docker/colcon_ws/src/patrol_planner/yolo_training/: TRAINING_GUIDE.md  data_aug.py  dataset.yaml  json2yolo.py
ros2_docker/colcon_ws/src/patrol_planner/yolo_training/dataset/_json_backup/train/: missing_000.json  missing_001.json  missing_002.json  missing_003.json  missing_004.json  missing_005.json  missing_006.json  missing_007.json  missing_008.json  missing_009.json  missing_010.json  missing_011.json  missing_012.json  missing_013.json  missing_014.json  missing_015.json  unity01.json  unity02.json  unity03.json  unity04.json  unity05.json
ros2_docker/colcon_ws/src/patrol_planner/yolo_training/dataset/_json_backup/val/: missing_016.json  missing_017.json  missing_018.json  missing_019.json  unity06.json  unity07.json  unity08.json  unity09.json
ros2_docker/colcon_ws/src/patrol_planner/yolo_training/dataset/labels/train/: missing_000.txt  missing_001.txt  missing_002.txt  missing_003.txt  missing_004.txt  missing_005.txt  missing_006.txt  missing_007.txt  missing_008.txt  missing_009.txt  missing_010.txt  missing_011.txt  missing_012.txt  missing_013.txt  missing_014.txt  missing_015.txt  (+5 more)
(+242 files in other folders)
